before complelty refactoring on new branch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root">Bład skryptów</div>
-    <script src="src/Wrapper.jsx"></script>
+    <script src="src/AppClass.jsx"></script>
   </body>
 </html>
