--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <div id="root">Bład skryptów</div>
+    <div id="root"></div>
     <script src="src/index.jsx"></script>
   </body>
 </html>
